<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DE85ED"
    tools:context=".Bread_Pakora_MainActivity">

    <TextView
        android:id="@+id/bread_pakora_headlime_textView"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="94dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/recipe_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bread_pakora_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bread_pakora_imageView"
        android:layout_width="408dp"
        android:layout_height="214dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bread_pakora" />

    <TextView
        android:id="@+id/bread_pakora_igredientName_textView"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginTop="284dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/ingredients_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chocolate_ingredients_ScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bread_pakora_igredientName_textView6"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginTop="440dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/instruction_name"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chocolate_instructions_scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/chocolate_ingredients_ScrollView"
        android:layout_width="364dp"
        android:layout_height="119dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/bread_pakora_igredientName_textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/chocolate_ingredients_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/bread_pakora_ingredients"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </ScrollView>

    <ScrollView
        android:id="@+id/chocolate_instructions_scrollView"
        android:layout_width="360dp"
        android:layout_height="231dp"
        android:layout_marginTop="468dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/chocolate_instructions_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bread_pakora_recipe"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>