<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DE85ED"
    tools:context=".vegBurger_MainActivity">

    <TextView
        android:id="@+id/veg_burger_headlime_textView"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="94dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/recipe_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/veg_burger_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/veg_burger_imageView"
        android:layout_width="410dp"
        android:layout_height="218dp"
        android:layout_marginTop="52dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/veg_burger_igredientName_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/veg_burger" />

    <TextView
        android:id="@+id/veg_burger_igredientName_textView"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/ingredients_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chocolate_ingredients_ScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <TextView
        android:id="@+id/igredientName_textView4"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginTop="440dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/instruction_name"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chocolate_instructions_scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/chocolate_ingredients_ScrollView"
        android:layout_width="364dp"
        android:layout_height="119dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/igredientName_textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/chocolate_ingredients_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/veg_burger_ingredients"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </ScrollView>

    <ScrollView
        android:id="@+id/chocolate_instructions_scrollView"
        android:layout_width="360dp"
        android:layout_height="231dp"
        android:layout_marginTop="468dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/chocolate_instructions_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veg_burger_recipe"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>